@@ -1,3 +1,8 @@
+2005-12-02  Michael Albinus  <michael.albinus@gmx.de>
+
+	* Makefile.in ($(localinfodir)): New target.
+	($(localinfodir)/%, $(localinfodir)/dir): Depend on it.
+
 2005-10-08  Michael Albinus  <michael.albinus@gmx.de>
 
 	Version 2.0.51 released.
